<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@android:color/holo_blue_light"
    tools:context="deepiter.localchat.MainActivity">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/lblAppTitle"
            android:text="@string/app_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp">

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/main_description" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            android:hint="@string/main_username"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:maxLength="25"
            android:inputType="text"
            android:textColorHint="@android:color/white"
            android:autofillHints="Anh Mã" tools:targetApi="o" />

        <Button
            android:layout_margin="16dp"
            android:padding="20dp"
            android:id="@+id/btnJoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_join"
            android:enabled="false"
            android:onClick="joinPressed" />

    </LinearLayout>
</LinearLayout>
