<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@android:color/holo_blue_light"
    tools:context=".BroadcastActivity">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/lblAppTitle"
            android:text="@string/app_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/lblWelcome"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/broadcast_welcome" />

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/broadcast_waiting" />

        <ListView
            android:id="@+id/ListView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@null"
            android:dividerHeight="0dp"
            tools:listitem="@layout/fragment_client"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry">
        </ListView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/broadcast_no_users_available"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>